00006201: Modul settings "image": show field "language" readonly if form is readonly

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/plugin-cm-neo/setting.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/plugin-cm-neo/setting.tml
@@ -54,7 +54,7 @@
 			</div>
 		
 			<div style="margin:10px">
-				<tml:input name="{scoped:lang}" default="{_lang}" type="select" optionsitem="_langs" changeaction="$refresh" cssclass="form-control"/>
+				<tml:input name="{scoped:lang}" default="{_lang}" type="select" optionsitem="_langs" changeaction="$refresh" cssclass="form-control" mode="{option:mode}"/>
 			</div>
 			
 			<div style="margin:10px">
