--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/paste-page.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/paste-page.tml
@@ -56,7 +56,7 @@
 			</tml:case>
 			
 			<tml:{div} html_class="alert alert-danger" unless="$mc.isAllowedPageType">
-				Das Einfügen der Seite ist an dieser Stelle nicht erlaubt.
+				Das Einfügen der Seite von Typ '@{$mc.pageType}' ist an dieser Stelle nicht erlaubt.
 			</tml:{div}>
 			
 			<tml:case if="$mc.isAllowedPageType">
