00006217: Module "form": added option to use "labeled=wrap" for checkboxes and radio buttons

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/render_field.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/render_field.tml
@@ -72,7 +72,7 @@
 			focus="{CMM.setting('focus')||false}"
 			validation="{_validation||true}"
 			message="{_message}"
-			labeled="true"
+			labeled="{$option_formfield_labeled!=null ? $option_formfield_labeled : true}"
 			format="{_format}"
 			divider="{_divider}"
 			default="{CMM.setting('defaultvalue')}" 
