00006227: Module "formfield": Avoid exception when field name is empty

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/render_field.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/render_field.tml
@@ -28,7 +28,8 @@
 	_divider = CMM.setting('divider')=="single-line" ? " " : null;
 	
 	_message = CMM.setting('validationmessage');
-	_fieldname = CMM.setting('fieldname').trim();
+	_fieldname = CMM.setting('fieldname');
+	_fieldname = _fieldname && _fieldname.trim();
 	_label = CMM.setting("label");
 
 	var fieldtype = CMM.setting('fieldtype');
