--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/content-modules/settings.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/content-modules/settings.tml
@@ -1,3 +1,40 @@
+<tml:eventscript onevent="modules-copied-to-clipboard">
+	var mods = portletEvent.getParameter("mods")
+	setSessionVar("_CM_clipboard_modules", mods);
+	
+	var props={};
+	copyFields(JSON.parse(mods))
+	setSessionVar("_CM_clipboard_modules_props", JSON.stringify(props));
+	
+	//console.log("event modules-copied-to-clipboard, _CM_clipboard_modules_props", JSON.stringify(props))
+	
+	function copyFields(mod){
+		var duplicated_from = mod.duplicated_from;
+		var id = mod.id;
+		if(!duplicated_from)
+			return;
+		for(let fieldname in Iterator(tmlform.fieldnames)){
+			if(fieldname.indexOf(duplicated_from)>=0){
+				var base = fieldname.split(duplicated_from)[0];
+				var values = [];
+				for(let value in Iterator(tmlform.fieldList(fieldname)))
+					values.push(value);
+				props[base+id] = values;
+			}
+		}
+		var children = mod.children;
+		for(let [index,child] in children)
+			copyFields(child);
+	}
+</tml:eventscript>
+
+<tml:eventscript onevent="modules-copied-from-clipboard">
+	var props = JSON.parse(_CM_clipboard_modules_props || "{}");
+	for (let key in props) {
+		tmlform.setField(key, props[key]);
+	}
+</tml:eventscript>
+
 <tml:eventscript onevent="modules-duplicated">
 	var mod = portletEvent.getParameter("mod");
 	copyFields(mod)
