--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/login/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/login/render.tml
@@ -77,33 +77,43 @@
 					</tml:then>
 
 					<tml:else>				
-						<tml:form id="{scoped:login-form}" onsubmit="window.login()" cssclass="login-form box">
+						<tml:form id="{scoped:login-form}" onsubmit="window.login()">
 							<script>
 								function login(){
 									WGA.callAction("<tml:action ref="login" param1="{_dbkey}"/>");
 								}
 							</script>
 							
-							<div class="login-error">
-								<tml:formmessages divider="<br>"/>
-							</div>			
+							<fieldset>
 							
-							<label><tml:label key="module.login.label.username"/>:</label>
-							<div class="data">
-								<tml:input type="text" name="username" focus="true"
-									validation="$E_VALUE!=''"
-									message="{label('module.login.username.validation')}"
-								/>
-							</div>
-							
-							<label><tml:label key="module.login.label.password"/>:</label>
-							<div class="data">
-								<tml:input type="password" name="password"/>
-							</div>
-							
-							<div class="button-bar">
-								<button type="submit" class="btn">login</button>
-							</div>
+								<tml:case condition="tmlform.hasmessages()">
+									<div class="login-error">
+										<tml:formmessages divider="<br>"/>
+									</div>
+								</tml:case>
+								
+								<div class="formfield">
+									<label><tml:label key="module.login.label.username"/>:</label>
+									<div class="data">
+										<tml:input type="text" name="username" focus="true"
+											validation="$E_VALUE!=''"
+											message="{label('module.login.username.validation')}"
+										/>
+									</div>
+								</div>
+								
+								<div class="formfield">
+									<label><tml:label key="module.login.label.password"/>:</label>
+									<div class="data">
+										<tml:input type="password" name="password"/>
+									</div>
+								</div>
+								
+								<div class="button-bar formfield">
+									<button type="submit">login</button>
+								</div>
+								
+							</fieldset>
 							
 						</tml:form>
 					</tml:else>
@@ -119,9 +129,13 @@
 	<tml:else>
 
 		<div class="logout">
-			<tml:label key="module.login.you-are-loggedin-as"/>
-			<strong><tml:item name="_username" encode="html"/></strong>.
-			<tml:button cssclass="btn" clickaction="logout" param1="{_dbkey}">logout</tml:button>		
+			<div class="msg">
+				<tml:label key="module.login.you-are-loggedin-as"/>
+				<span class="username"><tml:item name="_username" encode="html"/></span>.
+			</div>
+			<div class="button">
+				<tml:button cssclass="btn" clickaction="logout" param1="{_dbkey}">logout</tml:button>
+			</div>		
 		</div>
 		
 	
