00006245: Module "tiles": corrected margin in case of multiple tiles

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/css.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/css.tml
@@ -2,7 +2,7 @@
 
 	"+ .module-cm_tiles": {
 		// if we have a following tile module remove default module margin 
-		margin_top: "-10px"
+		margin_top: "-<tml:script expression="option('section-margin')||10" format="0"/>px",
 	},
 
 	">.tiles": {
