--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/seo.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/seo.tml
@@ -49,7 +49,7 @@
 						<tml:input meta="true" name="seo_robots_follow" type="boolean" options="follow|true" cssclass="symbol" labeled="true"/>
 					</div>
 					<div style="width:50%;float:left" class="sitemap">
-						<h4>Sitemap</h4>
+						<h4>Sitemap.xml</h4>
 						<div class="row">
 							<label class="col-md-6">Updatehäufigkeit:</label>
 							<div class="col-md-6">
