--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/login/settings.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/login/settings.tml
@@ -28,18 +28,18 @@
 	<tml:input type="text" name="{scoped:dbkey}" cssstyle="width:100%" mode="{option:mode}"/>
 </div>
 
-<label><tml:label key="login.settings.use-https"/>:</label>
-<div style="margin:10px">
-	<tml:input type="boolean" name="{scoped:https}" mode="{option:mode}"/>
-</div>
 
 <label><tml:label key="login.settings.if-not-logged-in"/>:</label>
 <div style="margin:10px">
-	<tml:input type="select" name="{scoped:action}" options="{label('login.settings.if-not-logged-in.options')}" mode="{option:mode}"/>
-	<p style="margin:15px 0 5px"><tml:label key="login.settings.not-logged-in-message"/>:</p>
-	<tml:input type="textarea" name="{scoped:loginmessage}" mode="{option:mode}"
-		cssstyle="width:100%;resize:none" 
-		html_placeholder="{label('login.settings.logginmessage.placeholder')}"/>
+	<tml:input type="select" name="{scoped:action}" options="{label('login.settings.if-not-logged-in.options')}" mode="{option:mode}" changeaction="$refresh"/>
+	<tml:case condition="tmlform.field(WGA.scoped('action'))=='login'">
+		<p style="margin:15px 0 5px">Überschrift:</p>
+		<tml:input name="{scoped:legend}"/> 
+		<p style="margin:15px 0 5px"><tml:label key="login.settings.not-logged-in-message"/>:</p>
+		<tml:input type="textarea" name="{scoped:loginmessage}" mode="{option:mode}"
+			cssstyle="width:100%;resize:none" 
+			html_placeholder="{label('login.settings.logginmessage.placeholder')}"/>
+	</tml:case>
 </div>
 
 <script>
