--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/content-modules.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/content-modules.tml
@@ -1,4 +1,4 @@
-<tml:form id="module-settings">
+<tml:form id="module-settings" htmlinput="true">
 
 	<tml:script>
 		var settings_map = CMM.getModulesSettingsMap("content");
