--- a/OpenWGA/plugins/cm-neo/design/tml/html/util/select-document.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/util/select-document.tml
@@ -2,15 +2,18 @@
 
 <tml:script>
 	_dbkey = $option_dbkey || meta('db', 'dbkey')
-	_area = AREA;
-
-	var areas = App.getAllowedAreaNames(_dbkey);
-	if(!_area || !areas.contains(_area))
-		_area = areas.get(0);
 </tml:script>
 
 <tml:if condition="tmlform.mode()=='edit' && $option_mode!='view' && $option_mode!='readonly'">
 	<tml:then>
+		<tml:script>
+			_area = AREA;
+			
+			var areas = App.getAllowedAreaNames(_dbkey, false, true);
+			if(!_area || !areas.contains(_area))
+				_area = (areas.size() && areas.get(0)) || "- nicht verfügbar";
+			
+		</tml:script>
 		<div class="select-tree-wrapper">
 			<a href="#" id="select-key-<tml:option name="fieldname"/>" class="form-control">
 				<span class="title">
