00006269: Replaced <script> with <tml:{script} encode="jsmin">

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/google-map/render-marker.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/google-map/render-marker.tml
@@ -29,9 +29,9 @@
 			new google.maps.LatLng(<tml:script expression="String(CMM.setting('map_lat')).replace(/,/,'.')"/>, <tml:script expression="String(CMM.setting('map_lng')).replace(/,/,'.')"/>),
 			"<tml:option name="title"/>", 
 			"<tml:script expression="CMM.settingList('map_address_info')" divider="<br>"/>"
-		)
+		);
 	</tml:then>
 	<tml:else>
-		MAPS.addMarkerToAdress(map, "<tml:option name="title"/>", "<tml:[setting] o_name="map_address"/>", "<tml:script expression="CMM.settingList('map_address_info')" divider="<br>"/>")		
+		MAPS.addMarkerToAdress(map, "<tml:option name="title"/>", "<tml:[setting] o_name="map_address"/>", "<tml:script expression="CMM.settingList('map_address_info')" divider="<br>"/>");		
 	</tml:else>
 </tml:if>
