--- a/OpenWGA/plugins/admin/design/tml/html/dbservers/server/pool-runtime-portlet.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/dbservers/server/pool-runtime-portlet.tml
@@ -1,7 +1,7 @@
 <tml:script>
 	var server = WGACore.getDatabaseServers().get($option_uid)
 	_info = server && server.getPoolInfo && server.getPoolInfo()
-	//console.log(server, _info)
+	//console.log(server, $option_uid, _info)
 </tml:script>
 <tml:case if="_info">
 	<fieldset>
