--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/settings/content.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/settings/content.tml
@@ -59,7 +59,7 @@
 			<div class="tab-pane active" id="basic">
 			
 				<tml:[form-field] o_label="Titel des Inhalts" o_field="title" o_meta="true"
-					o_validation="$E_VALUE!=''"
+					o_validation="$E_VALUE.trim()!=''"
 					o_message="Bitte geben Sie einen Titel ein"
 					o_placeholder="Bitte einen Titel eingeben"
 				/>
