--- a/OpenWGA/plugins/cm-neo/design/tml/html/admin/contents/portlet.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/admin/contents/portlet.tml
@@ -69,7 +69,7 @@
 	<div class="content">
 		<div class="table">
 			<div class="row">
-				<div class="col" _style="width:40%">Titel</div>
+				<div class="col">Titel</div>
 				<div class="col">Bereich</div>
 				<tml:case condition="tmlform.filter=='uname'">
 					<div class="col">Name</div>
@@ -83,8 +83,10 @@
 				<tml:case condition="tmlform.filter!='language'">
 					<div class="col">Sprache</div>
 				</tml:case>				
+				<div class="col">Version</div>
 				<div class="col">Erstellt</div>
 				<div class="col">Zuletzt geändert</div>
+				<div class="col" style="text-align:right">Anhänge</div>
 			</div>
 			<tml:foreach item="$pc.contents" pagesize="{portlet.pagesize||50}">
 				<div class="row">
@@ -112,9 +114,11 @@
 					</tml:case>
 					<tml:case condition="tmlform.filter!='language'">
 						<div class="col"><tml:meta name="language"/></div>
-					</tml:case>					
+					</tml:case>
+					<div class="col"><tml:meta name="version"/></div>
 					<div class="col"><tml:meta name="created" format="dd.MM.yyy HH:mm:ss"/></div>
 					<div class="col"><tml:meta name="modified" format="dd.MM.yyy HH:mm:ss"/></div>
+					<div class="col" style="text-align:right">@{$pc.fileSize encode="none"}</div>
 				</div>
 			</tml:foreach>
 		</div>
